<resources>
    <string name="main">Main Image</string>
    <string name="app_name">The Greenwich Union</string>
    <string name="description">Great beer and honest home made food in an unpretentious and friendly environment</string>
    <string name="address">56 Royal Hill, Greenwich, London SE10 8RT</string>
    <string name="phone">(+44) 020 8692 6258</string>
    <string name="hours">Hours</string>
    <string name="days_1">Monday</string>
    <string name="days_2">Tuesday</string>
    <string name="days_3">Wednesday</string>
    <string name="days_4">Thursday</string>
    <string name="days_5">Friday</string>
    <string name="days_6">Saturday</string>
    <string name="days_7">Sunday</string>
    <string name="hours_1">12–11pm</string>
    <string name="hours_2">12–11pm</string>
    <string name="hours_3">12–11pm</string>
    <string name="hours_4">12–11pm</string>
    <string name="hours_5">12–12pm</string>
    <string name="hours_6">12–12pm</string>
    <string name="hours_7">11–10pm</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="drinks">Drinks</string>
</resources>
